javascript/ql/test/query-tests/LanguageFeatures/SyntaxError/arrows.js
(a, a) => a + a; // $ TODO-SPURIOUS: Alert
